@@ -1,5 +1,11 @@
 2009-11-23  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime-repl.el (slime-repl-previous-matching-input)
+	(slime-repl-next-matching-input): Read input by means of
+	`slime-read-from-minibuffer' so TAB will complete symbols for us.
+
+2009-11-23  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* swank-asdf.lisp (operate-on-system-for-emacs),
 	(operate-on-system): Muffle ASDF:COMPILE-ERROR because we reuse
 	Slime's compilation error reportery anyway, and sldb popping up is
